--- a/package.json
+++ b/package.json
@@ -47,8 +47,13 @@
     ]
   },
   "devDependencies": {
+    "@eclass/semantic-release-docker": "^3.0.0",
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/exec": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.6.0"
+    "prettier": "^2.6.0",
+    "semantic-release": "^19.0.2"
   }
 }
