--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,9 @@
     "plugin:import/recommended"
   ],
   "rules": {
+    "newline-before-return": "error",
+    "prefer-arrow-callback": "error",
+    "arrow-body-style": ["error", "as-needed"],
     "import/order": [
       "error",
       {
