--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@types/node": "^17.0.22",
     "@types/react": "^17.0.41",
     "@types/react-dom": "^17.0.14",
+    "@types/yup": "^0.29.13",
     "rambda": "^7.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.28.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
