--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "tshows-ui",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.5.10",
+    "@graphql-codegen/schema-ast": "^2.4.1",
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.2",
     "@testing-library/jest-dom": "^5.16.2",
@@ -16,6 +18,7 @@
     "rambda": "^7.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-hook-form": "^7.28.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
@@ -27,7 +30,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint \"src/**/*.{ts,tsx}\" --max-warnings 0 --fix"
+    "lint": "eslint \"src/**/*.{ts,tsx}\" --max-warnings 0 --fix",
+    "codegen": "graphql-codegen --config codegen.yml"
   },
   "eslintConfig": {
     "extends": [
@@ -49,6 +53,11 @@
   },
   "devDependencies": {
     "@eclass/semantic-release-docker": "^3.0.0",
+    "@graphql-codegen/cli": "2.6.2",
+    "@graphql-codegen/introspection": "2.1.1",
+    "@graphql-codegen/typescript": "2.4.8",
+    "@graphql-codegen/typescript-operations": "2.3.5",
+    "@graphql-codegen/typescript-react-apollo": "3.2.11",
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
