--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react": "^17.0.41",
     "@types/react-dom": "^17.0.14",
     "@types/yup": "^0.29.13",
+    "notistack": "^2.0.3",
     "rambda": "^7.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
