--- a/.eslintrc
+++ b/.eslintrc
@@ -16,7 +16,8 @@
           "builtin",
           "external",
           "internal",
-          ["sibling", "parent"],
+          "parent",
+          "sibling",
           "index"
         ]
       }
