--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react": "^17.0.41",
     "@types/react-dom": "^17.0.14",
     "@types/yup": "^0.29.13",
+    "classnames": "^2.3.1",
     "notistack": "^2.0.3",
     "rambda": "^7.0.3",
     "react": "^17.0.2",
