--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@types/yup": "^0.29.13",
     "classnames": "^2.3.1",
     "notistack": "^2.0.3",
-    "rambda": "^7.0.3",
+    "ramda": "^0.28.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
@@ -45,6 +45,7 @@
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
+    "@types/ramda": "^0.28.8",
     "conventional-changelog-conventionalcommits": "^4.6.3",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
