--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react-dom": "^17.0.14",
     "@types/yup": "^0.29.13",
     "classnames": "^2.3.1",
+    "luxon": "^2.3.1",
     "notistack": "^2.0.3",
     "ramda": "^0.28.0",
     "react": "^17.0.2",
@@ -45,6 +46,7 @@
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
+    "@types/luxon": "^2.3.1",
     "@types/ramda": "^0.28.8",
     "conventional-changelog-conventionalcommits": "^4.6.3",
     "eslint-config-prettier": "^8.5.0",
