--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint \"src/**/*.{ts,tsx}\" --max-warnings 0 --fix",
-    "codegen": "graphql-codegen --config codegen.yml"
+    "codegen": "graphql-codegen --config codegen.yml",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@apollo/client": "^3.5.10",
@@ -51,6 +52,8 @@
     "conventional-changelog-conventionalcommits": "^4.6.3",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.7",
     "prettier": "^2.6.0",
     "semantic-release": "^19.0.2"
   },
@@ -70,6 +73,12 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "lint-staged": {
+    "src/**/*.{ts,tsx}": [
+      "eslint --max-warnings 0 --fix",
+      "prettier --write"
     ]
   }
 }
