feat: add upcoming section (#23)
* Add husky

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint \"src/**/*.{ts,tsx}\" --max-warnings 0 --fix",
-    "codegen": "graphql-codegen --config codegen.yml"
+    "codegen": "graphql-codegen --config codegen.yml",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@apollo/client": "^3.5.10",
@@ -24,8 +25,9 @@
     "@types/react-dom": "^17.0.14",
     "@types/yup": "^0.29.13",
     "classnames": "^2.3.1",
+    "luxon": "^2.3.1",
     "notistack": "^2.0.3",
-    "rambda": "^7.0.3",
+    "ramda": "^0.28.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
@@ -45,9 +47,13 @@
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
+    "@types/luxon": "^2.3.1",
+    "@types/ramda": "^0.28.8",
     "conventional-changelog-conventionalcommits": "^4.6.3",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.7",
     "prettier": "^2.6.0",
     "semantic-release": "^19.0.2"
   },
@@ -67,6 +73,12 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "lint-staged": {
+    "src/**/*.{ts,tsx}": [
+      "eslint --max-warnings 0 --fix",
+      "prettier --write"
     ]
   }
 }
