--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-hook-form": "^7.28.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "slugify": "^1.6.5",
     "typescript": "^4.6.2",
     "yup": "^0.32.11"
   },
