--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nivo/bar": "^0.79.1",
     "@nivo/calendar": "^0.79.1",
     "@nivo/core": "^0.79.0",
+    "@nivo/pie": "^0.79.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
