--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/yup": "^0.29.13",
     "classnames": "^2.3.1",
     "luxon": "^2.3.1",
+    "material-ui-popup-state": "^2.0.1",
     "notistack": "^2.0.3",
     "ramda": "^0.28.0",
     "react": "^17.0.2",
