--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react-dom": "^17.0.14",
     "@types/yup": "^0.29.13",
     "classnames": "^2.3.1",
+    "graphql-ws": "^5.8.2",
     "luxon": "^2.3.1",
     "material-ui-popup-state": "^2.0.1",
     "notistack": "^2.0.3",
